change FrenUtil from submodule to nuget

--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -21,9 +21,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="$(SolutionDir)FreneticUtilities\FreneticUtilities\FreneticUtilities.csproj" />
-  </ItemGroup>
-  <ItemGroup>
+    <PackageReference Include="FreneticLLC.FreneticUtilities" Version="1.0.1" />
     <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
   </ItemGroup>
 </Project>
